# python-init-projects

./: .gitignore  Makefile  NAMING.md  README.md  pyproject.toml
init_projects/: __init__.py
init_projects/audio_signal/: __init__.py  signal_processing.py
init_projects/identificador_texto/: docx_text_extractor.py  extractor_texto_docx.py  extractor_texto_pdf.py  extractor_texto_pptx.py  extractor_texto_txt.py  identificador_texto.py  pdf_text_extractor.py  txt_text_extractor.py
init_projects/text_extractor/: __init__.py  docx_text_extractor.py  format_text.py  pdf_text_extractor.py  pptx_tect_extractor.py  pptx_text_extractor.py  txt_text_extractor.py
notebooks/: audio_signal_viz.ipynb  pruebas.ipynb  texto_prueba_doc.docx  texto_prueba_pptx.pptx  texto_prueba_txt.txt
